--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -149,7 +149,7 @@ section .icon {
 
 /* Page -- Intro */
 .intro.hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/header_image.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../images/header_image.jpg");
 }
 
 section.about .out-box {
@@ -253,7 +253,7 @@ section.about .out-box {
 
 /* Page -- Portfolio */
 .portfolio .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/header_image.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../images/header_image.jpg");
 }
 
 /********** STACK **********/
